<resources>
    <string name="app_name">HandsTalk</string>
    <string name="title_message">Message</string>
    <string name="title_translate">Translate</string>
    <string name="title_facetime">Facetime</string>
    <string name="title_account">Account</string>
    <string name="welcome_to">Welcome To</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="name_example_com">name@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">* * * * * *</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="please_fill_in_the_information_to_get_your_account_ready">Please fill in the information to get your account ready</string>
    <string name="nama_hama">Nama Hama</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
    <string name="waiting_for_response">Waiting For Response...</string>
    <string name="send_invitation">Sending Invitation...</string>
    <string name="connecting">Connecting...</string>
    <string name="logout">Logout</string>
    <string name="update_profile">Update profile</string>
    <string name="loading">Loading...</string>
    <string name="client_id">160884814724-lobq4oa7i4kjojbvp6f8oboq28gariot.apps.googleusercontent.com</string>

</resources>