<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_message">

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.handstalk.signdetect.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_translate"
        android:name="com.handstalk.signdetect.ui.translate.TranslateFragment"
        android:label="@string/title_translate"
        tools:layout="@layout/fragment_translate" />

    <fragment
        android:id="@+id/navigation_facetime"
        android:name="com.handstalk.signdetect.ui.facetime.FacetimeFragment"
        android:label="@string/title_facetime"
        tools:layout="@layout/fragment_facetime" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.handstalk.signdetect.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_facetime" />

</navigation>