<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_meeting_invitation"
        tools:context=".activities.IncomingInvitationActivity">


        <ImageView
            android:id="@+id/imageMeetingType"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_facetime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorTextIcons" />

        <TextView
            android:id="@+id/textIncomingMeetingInvitation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/incoming_meeting_invitation"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintTop_toBottomOf="@id/imageMeetingType" />

        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iconImage"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:background="@drawable/background_white_circle"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:includeFontPadding="false" />

            <TextView
                android:id="@+id/textUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/waitingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/waiting_for_response"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintTop_toBottomOf="@id/imageMeetingType" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageAcceptInvitation"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:background="@drawable/background_accept_invitation"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_accept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/colorTextIcons" />

        <ImageView
            android:id="@+id/imageRejectInvitation"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:background="@drawable/background_reject_invitation"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_reject"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/colorTextIcons" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>